# capsoplot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  capsoplot.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycapso/: __init__.py  models.py  plots.py
tests/: test_pycapso.py
