[tool.poetry]
name = "pycapso"
version = "0.1.0"
description = "This package contains some utilities used to analyse the behavior of the CAPSO model."
authors = ["Mario Martínez"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
