[tool.poetry]
name = "pycapso"
version = "0.1.0"
description = "This package contains some utilities used to analyse the behavior of the CAPSO model."
authors = ["Mario Martínez"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8 < 3.12"
numpy = ">=1.23.2"
matplotlib = ">=3.5.3"
pandas = ">=1.4.3"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
