[tool.poetry]
name = "pycapso"
version = "0.1.0"
description = "This package contains some utilities used to analyse the behavior of the CAPSO model."
authors = ["Mario Martínez"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8 < 3.12"
numpy = ">=1.23.2"
matplotlib = ">=3.5.3"
pandas = ">=1.4.3"
scipy = "^1.9.0"
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
